# databricks-ai-steward

./: .dockerignore  .gitignore  AGENTS.md  AUDIT_LOG_SCHEMA.md  CLAUDE.md  COMPATIBILITY.md  COMPLIANCE.md  Dockerfile  EXERCISE.md  FAILURE_MODES.md  FLOW.md  INCIDENT_RESPONSE.md  README.md  RUNBOOK.md  SECURITY.md  STRESS_FINDINGS.md  WALKTHROUGH.md  pyproject.toml
.github/workflows/: ci.yml
deploy/: docker-compose.yml
deploy/helm/databricks-ai-steward/: .helmignore  Chart.yaml  README.md  values.yaml
deploy/helm/databricks-ai-steward/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  networkpolicy.yaml  poddisruptionbudget.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
docs/: EXERCISE.html
mcp_server/: app.py  audit.py  audit_verify.py  lifecycle.py  prompts.py  rate_limit.py  server.py  telemetry.py
mcp_server/databricks/: client.py  sql_safety.py
mcp_server/tools/: basic_tools.py  health.py  registry.py  sql_tools.py
stress/: harness.py  load.py  probe_a1_fix_verify.py  probe_a1_leak.py  probe_a_correlation.py  probe_adversarial.py  probe_b_disconnect.py  probe_c_signal.py  probe_d_blast_radius.py  probe_databricks_soak.py  probe_e_boundary.py  probe_http_auth.py  probe_http_lifecycle.py  probe_http_transport.py  probe_inspector_compat.py  probe_langchain_compat.py  probe_restart.py  probe_sql_cancellation.py  probe_sql_concurrency.py  probe_sql_governance.py  probe_stdout_clean.py  probe_token_audit.py  probe_typescript_compat.py  server.py
stress/ts/: compat.ts  package-lock.json  package.json
tests/: conftest.py  test_audit_and_rate_limit.py  test_audit_chain.py  test_databricks_faults.py  test_databricks_tools.py  test_guards.py  test_prompts.py  test_sql_safety.py  test_sql_tools.py  test_system_table_tools.py  test_telemetry.py  test_tool_credentials.py
